syntax = "proto3";

message Contact {
  string name = 1;
  string phone = 2;
}

message ContactRequest {
  string name = 1;
}

message ContactResponse {
  Contact contact = 1;
}

message ContactList {
  repeated Contact contacts = 1;
}

message ChangeRequest {
  string type = 1; // 'add', 'update', 'remove'
  Contact contact = 2;
}

message ChangeResponse {
  bool success = 1;
  string message = 2;
}

message Empty {}

service AgendaService {
  rpc AddContact(Contact) returns (ChangeResponse);
  rpc UpdateContact(Contact) returns (ChangeResponse);
  rpc RemoveContact(ContactRequest) returns (ChangeResponse);
  rpc GetContact(ContactRequest) returns (ContactResponse);
  rpc GetAllContacts(Empty) returns (ContactList);
  rpc SyncContacts(ContactList) returns (ChangeResponse);

  rpc ExchangeUpdates(stream ChangeRequest) returns (stream ChangeRequest);
}